[gd_scene load_steps=9 format=2]

[ext_resource path="res://Events/LevelUp.gd" type="Script" id=1]
[ext_resource path="res://UI/Shapes/question.png" type="Texture" id=2]
[ext_resource path="res://UI/Shapes/squareglow.png" type="Texture" id=3]
[ext_resource path="res://TIMESS__.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Shapes/squareshadow.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 146, 54 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="maxhealth" type="Node2D" parent="."]
position = Vector2( 201, 790 )
__meta__ = {
"_edit_group_": true
}

[node name="shadow2" type="NinePatchRect" parent="maxhealth"]
modulate = Color( 0.752941, 0.215686, 1, 0.196078 )
margin_left = -143.0
margin_top = -54.0
margin_right = 1377.0
margin_bottom = 561.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="maxhealth"]
modulate = Color( 1, 0.419608, 0.419608, 0.27451 )
margin_left = -140.0
margin_top = -54.0
margin_right = 1360.0
margin_bottom = 561.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="maxhealth"]
modulate = Color( 0.870588, 0.133333, 0.133333, 1 )
margin_left = -131.0
margin_top = -41.0
margin_right = 429.0
margin_bottom = 160.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
patch_margin_left = 99
patch_margin_top = 97
patch_margin_right = 102
patch_margin_bottom = 104
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonHP" type="TextureButton" parent="maxhealth"]
margin_left = -137.0
margin_top = -46.0
margin_right = 155.0
margin_bottom = 63.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow2" type="NinePatchRect" parent="maxhealth"]
visible = false
modulate = Color( 1, 0.305882, 0.305882, 0.117647 )
margin_left = -153.0
margin_top = -66.0
margin_right = 1457.0
margin_bottom = 679.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="maxhealth"]
margin_left = -158.0
margin_top = -23.0
margin_right = 176.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "+5 Max Health"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statAreaHP" type="Area2D" parent="maxhealth"]

[node name="statCollision" type="CollisionShape2D" parent="maxhealth/statAreaHP"]
visible = false
position = Vector2( 9, 9 )
shape = SubResource( 2 )

[node name="maxenergy" type="Node2D" parent="."]
position = Vector2( 507, 800 )

[node name="shadow3" type="NinePatchRect" parent="maxenergy"]
modulate = Color( 0.752941, 0.215686, 1, 0.196078 )
margin_left = -143.0
margin_top = -64.0
margin_right = 1377.0
margin_bottom = 551.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="maxenergy"]
modulate = Color( 1, 0.968627, 0.247059, 0.27451 )
margin_left = -140.0
margin_top = -65.0
margin_right = 1360.0
margin_bottom = 550.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="maxenergy"]
modulate = Color( 0.909804, 0.854902, 0, 1 )
margin_left = -131.0
margin_top = -52.0
margin_right = 429.0
margin_bottom = 148.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
patch_margin_left = 102
patch_margin_top = 98
patch_margin_right = 99
patch_margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonEP" type="TextureButton" parent="maxenergy"]
margin_left = -137.0
margin_top = -56.0
margin_right = 155.0
margin_bottom = 52.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow2" type="NinePatchRect" parent="maxenergy"]
visible = false
modulate = Color( 0.996078, 1, 0.396078, 0.117647 )
margin_left = -155.0
margin_top = -76.0
margin_right = 1455.0
margin_bottom = 664.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="maxenergy"]
margin_left = -156.0
margin_top = -33.0
margin_right = 178.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "-1 Max Energy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statAreaEP" type="Area2D" parent="maxenergy"]
position = Vector2( 6, -11 )

[node name="statCollision" type="CollisionShape2D" parent="maxenergy/statAreaEP"]
visible = false
position = Vector2( 3, 10 )
shape = SubResource( 2 )

[node name="maxmana" type="Node2D" parent="."]
position = Vector2( 839, 797 )

[node name="shadow" type="NinePatchRect" parent="maxmana"]
modulate = Color( 0.752941, 0.215686, 1, 0.196078 )
margin_left = -165.0
margin_top = -60.0
margin_right = 1355.0
margin_bottom = 555.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="maxmana"]
modulate = Color( 0.45098, 0.231373, 1, 0.27451 )
margin_left = -163.0
margin_top = -58.0
margin_right = 1337.0
margin_bottom = 557.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="maxmana"]
modulate = Color( 0.415686, 0.121569, 1, 1 )
margin_left = -153.0
margin_top = -47.0
margin_right = 407.0
margin_bottom = 155.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
patch_margin_left = 100
patch_margin_top = 99
patch_margin_right = 99
patch_margin_bottom = 103
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonMP" type="TextureButton" parent="maxmana"]
margin_left = -159.0
margin_top = -51.0
margin_right = 133.0
margin_bottom = 57.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow2" type="NinePatchRect" parent="maxmana"]
visible = false
modulate = Color( 0.552941, 0.407843, 1, 0.117647 )
margin_left = -171.0
margin_top = -71.0
margin_right = 1439.0
margin_bottom = 674.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="maxmana"]
margin_left = -181.0
margin_top = -30.0
margin_right = 153.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "+5 Max Mana"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statAreaMP" type="Area2D" parent="maxmana"]
position = Vector2( -3, -6 )

[node name="statCollision" type="CollisionShape2D" parent="maxmana/statAreaMP"]
visible = false
position = Vector2( -10, 9 )
shape = SubResource( 2 )

[node name="which" type="Node2D" parent="."]
position = Vector2( 500, 677 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="squareshadow" type="NinePatchRect" parent="which"]
modulate = Color( 1, 1, 1, 0.352941 )
margin_left = -200.0
margin_top = -51.0
margin_right = 2005.0
margin_bottom = 484.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="NinePatchRect" parent="which"]
modulate = Color( 0.0862745, 0.690196, 0, 1 )
margin_left = -191.0
margin_top = -39.0
margin_right = 862.0
margin_bottom = 174.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
patch_margin_left = 103
patch_margin_top = 105
patch_margin_right = 100
patch_margin_bottom = 102
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="which"]
margin_left = -189.0
margin_top = -29.0
margin_right = 228.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 0.843137 )
text = "Which will you choose?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="maxhealth/buttonHP" to="." method="_on_buttonHP_pressed"]
[connection signal="area_entered" from="maxhealth/statAreaHP" to="." method="_on_statAreaHP_area_entered"]
[connection signal="area_exited" from="maxhealth/statAreaHP" to="." method="_on_statAreaHP_area_exited"]
[connection signal="pressed" from="maxenergy/buttonEP" to="." method="_on_buttonEP_pressed"]
[connection signal="area_entered" from="maxenergy/statAreaEP" to="." method="_on_statAreaEP_area_entered"]
[connection signal="area_exited" from="maxenergy/statAreaEP" to="." method="_on_statAreaEP_area_exited"]
[connection signal="pressed" from="maxmana/buttonMP" to="." method="_on_buttonMP_pressed"]
[connection signal="area_entered" from="maxmana/statAreaMP" to="." method="_on_statAreaMP_area_entered"]
[connection signal="area_exited" from="maxmana/statAreaMP" to="." method="_on_statAreaMP_area_exited"]
